--- a/less/home-page.less
+++ b/less/home-page.less
@@ -92,7 +92,7 @@
       margin-bottom: 30px;
       @media @mobile {
         width: 80%;
-        margin: 0 auto;
+        margin: 0 auto 3rem;
       }
 
       .btn {
